data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_771.wast
;; 2. **Loop with Invalid `blocktype`**:    - **Description**: Test a loop instruction with an invalid block type that does not conform to any function type.    - **Constraint Checked**: Ensures that the block type is valid as some function type.    - **Relation to CFG**: Misinterpreted block types can disrupt the CFG, leading to unexpected control flows.

(assert_invalid
  (module (func (loop (type 0)))))
